--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,8 +35,8 @@ jobs:
       <<: *defaults
       steps:
         - checkout
-        - setup_remote_docker:
-            docker_layer_caching: true
+        # - setup_remote_docker:
+        #     docker_layer_caching: true
         - add_ssh_keys:
             fingerprints:
               - "ef:ef:77:6f:de:92:8e:dd:0a:19:62:f9:78:b1:21:74"
@@ -48,8 +48,8 @@ jobs:
       - image: circleci/python:3.6.6-stretch-browsers
     steps:
       - checkout
-      - setup_remote_docker:
-          docker_layer_caching: true
+      # - setup_remote_docker:
+      #     docker_layer_caching: true
 
       - run:
           name: "Login in to docker hub"
