--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ aliases:
         echo "source venv/bin/activate" >> $BASH_ENV
         . venv/bin/activate
         pip install setuptools --upgrade
-        pip install -r requirements/test.txt
+        pip install -r requirements.txt
   - &test
     run:
       name: Tests
