sou muito burro

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,7 +154,7 @@ workflows:
       - deploy:
           context: production
           requires:
-            - hold
+            - build
           filters:
             branches:
               only: 
